# medical-imaging-dashboard

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: architecture.md  deployment.md  index.md  plugins.md  usage.md
notebooks/: README.md
scripts/: generate_dashboard_example.py  run.ps1
src/: app.py
src/medical_imaging_dashboard/: __init__.py  app.py  cli.py  exceptions.py  session.py
src/medical_imaging_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/medical_imaging_dashboard/classification/: __init__.py
src/medical_imaging_dashboard/components/: __init__.py  charts.py  footer.py  header.py  metrics.py  patient_card.py  sidebar.py  tables.py  upload.py
src/medical_imaging_dashboard/config/: __init__.py  settings.py
src/medical_imaging_dashboard/integrations/: __init__.py  contracts.py
src/medical_imaging_dashboard/io/: __init__.py  dicom.py  images.py  loaders.py  nifti.py
src/medical_imaging_dashboard/pages/: about.py  classification.py  dicom_viewer.py  home.py  patient_browser.py  radiomics.py  reconstruction.py  reports.py  segmentation.py  settings.py  visualization.py
src/medical_imaging_dashboard/plugins/: __init__.py  manager.py
src/medical_imaging_dashboard/preprocessing/: __init__.py  denoising.py  normalization.py  registration.py  resampling.py  windowing.py
src/medical_imaging_dashboard/radiomics/: __init__.py
src/medical_imaging_dashboard/reconstruction/: __init__.py
tests/: test_session.py  test_volume.py  test_windowing.py
(+12 files in other folders)
