[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-imaging-dashboard"
version = "0.1.0"
description = "Extensible Streamlit dashboard for medical imaging and AI workflows."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Medical Imaging Dashboard Contributors"}]
dependencies = [
  "streamlit>=1.36", "SimpleITK>=2.3", "numpy>=1.26", "scipy>=1.12",
  "pandas>=2.2", "plotly>=5.22", "matplotlib>=3.9", "scikit-image>=0.23",
  "opencv-python-headless>=4.10", "nibabel>=5.2", "pydicom>=3.0",
  "openpyxl>=3.1", "reportlab>=4.2", "PyYAML>=6.0", "pydantic>=2.7"
]

[project.optional-dependencies]
ai = ["torch>=2.3", "monai>=1.3", "pyradiomics>=3.0.1,<3.1"]
volume = ["pyvista>=0.44", "vtk>=9.3"]
dev = ["pytest>=8.2", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.scripts]
medical-imaging-dashboard = "medical_imaging_dashboard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=medical_imaging_dashboard --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "D", "UP", "B", "SIM"]
ignore = ["D203", "D213", "D413", "N813"]
